--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "php": "~8.1.0|~8.2.0|~8.3.0",
+        "php": "~8.1.0|~8.2.0|~8.3.0|~8.4.0",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^10.0|^11.0",
         "laravel/prompts": "^0.1|^0.2|^0.3",
