--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^8.0|^9.0",
-        "pestphp/pest": "^2.0"
+        "pestphp/pest": "^2.0|^3.0"
     },
     "suggest": {
         "ext-intl": "Allows for more locales besides the default \"en\" when formatting money values."
