--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "nesbot/carbon": "^2.0|^3.0"
   },
   "require-dev": {
+    "laravel/pint": "^1.20",
     "orchestra/testbench": "^8.0|^9.0",
     "pestphp/pest": "^2.0|^3.0",
     "phpstan/phpstan": "^2.1",
