--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   "require": {
     "php": "~8.1.0|~8.2.0|~8.3.0|~8.4.0",
     "guzzlehttp/guzzle": "^7.0",
-    "laravel/framework": "^10.0|^11.0",
+    "laravel/framework": "^10.0|^11.0|^12.0",
     "laravel/prompts": "^0.1|^0.2|^0.3",
     "moneyphp/money": "^4.0",
     "nesbot/carbon": "^2.0|^3.0"
