--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
   },
   "require-dev": {
     "laravel/pint": "^1.20",
-    "orchestra/testbench": "^8.0|^9.0",
+    "orchestra/testbench": "^8.0|^9.0|^10.0",
     "pestphp/pest": "^2.0|^3.0",
     "phpstan/phpstan": "^2.1",
     "roave/security-advisories": "dev-latest"
