--- a/composer.json
+++ b/composer.json
@@ -31,16 +31,16 @@
     }
   ],
   "require": {
-    "php": "^8.1|^8.2|^8.3|^8.4",
+    "php": "^8.2|^8.3|^8.4",
     "guzzlehttp/guzzle": "^7.0",
-    "laravel/framework": "^10.0|^11.0|^12.0",
-    "laravel/prompts": "^0.1|^0.2|^0.3",
+    "laravel/framework": "^11.0|^12.0",
+    "laravel/prompts": "^0.2|^0.3",
     "moneyphp/money": "^4.0",
     "nesbot/carbon": "^2.0|^3.0"
   },
   "require-dev": {
     "laravel/pint": "^1.20",
-    "orchestra/testbench": "^8.0|^9.0|^10.0",
+    "orchestra/testbench": "^9.0|^10.0",
     "pestphp/pest": "^2.0|^3.0",
     "phpstan/phpstan": "^2.1",
     "roave/security-advisories": "dev-latest"
