--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,13 +16,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.1, 8.2, 8.3, 8.4]
+        php: [8.2, 8.3, 8.4]
         laravel: [10, 11, 12]
         exclude:
-          - php: 8.1
-            laravel: 11
-          - php: 8.1
-            laravel: 12
           - php: 8.4
             laravel: 10
 
