--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.2, 8.3, 8.4]
-        laravel: [10, 11, 12]
+        laravel: [11, 12]
         exclude:
           - php: 8.4
             laravel: 10
