--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
         "laravel/framework": "^11.0|^12.0",
         "laravel/prompts": "^0.2|^0.3",
         "moneyphp/money": "^4.0",
-        "nesbot/carbon": "^2.0|^3.0",
-        "ext-pcntl": "*"
+        "nesbot/carbon": "^2.0|^3.0"
     },
     "require-dev": {
         "laravel/pint": "^1.20",
